# Git-Scape-Web

./: .dockerignore  .gitignore  App.tsx  Dockerfile  README.md  chat_back.ts.bak  constants.ts  deploy.ps1  global.d.ts  index.html  index.tsx  nginx.conf  package-lock.json  package.json  types.ts
.gemini/skills/: How to create Skills.md  Introducing Agent Skills.ms  Skills for organizations, partners, the ecosystem.md  Teach Claude your way of working using skills.md  agentskills-agentskills-8a5edab282632443.txt  anthropics-skills-8a5edab282632443.txt  mlc-ai-web-llm-8a5edab282632443.txt
.llms/: git_scape_react_ga4_digest.txt
api/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  cloudbuild.yaml  main.py  pyproject.toml  requirements.txt
api/app/: api.py  config.py  converter.py  skill_builder.py  skill_generator.py
components/: DigestOutput.tsx  GithubTokenModal.tsx  Header.tsx  OutputTabs.tsx  RepoChat.tsx  RepoInput.tsx  UrlConverter.tsx  diagramUtils.ts
public/: robots.txt  sitemap.xml
services/: geminiService.ts  githubService.ts
web/: App.tsx  README.md  cloudbuild.yaml  constants.ts  index.css  index.html  package-lock.json  package.json  types.ts  vite.config.ts
web/components/: Diagram.tsx  GeminiApiKeyModal.tsx  Header.tsx  OutputTabs.tsx  RepoChat.tsx  RepoInput.tsx  SkillExport.tsx
web/services/: webllm.ts
